--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
     <meta name="theme-color" content="#2196F3">
-    <title>Adam Wilkins</title>
+    <title>adam wilkins</title>
 
     <!-- CSS  -->
     <link href="css/materialize.css" type="text/css" rel="stylesheet">
@@ -31,9 +31,8 @@
             <ul id="nav-mobile" class="right side-nav">
                 <li><a href="#intro">Service</a></li>
                 <li><a href="#work">Work</a></li>
-                <li><a href="#team">Team</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><img src="adamtest.png" height ="65" width = "65" margin ="25px">
+                <li><img src="adamtest.png" height ="60" width = "60">
             </ul><a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
             </div>
         </div>
