Fixed the profile picture and linked to the top of the page

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li><a href="#intro">Service</a></li>
                 <li><a href="#work">Work</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><img src="adamtest.png" height ="60" width = "60">
+                <li><a href = "#top"><img class="propic" src="adamtest.png" height ="60" width = "60"></a>
             </ul><a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
             </div>
         </div>
