changed some discription from latin

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             <div  class="col s12 m4 l4">
                 <div class="center promo promo-example">
                     <i class="mdi-image-flash-on"></i>
-                    <h5 class="promo-caption">Speeds up development</h5>
-                    <p class="light center">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Cum sociis natoque penatibus et magnis dis parturient montes.</p>
+                    <h5 class="promo-caption">Experienced</h5>
+                    <p class="light center">I currently work as an Air Force Avionics Technician for the C-130J airframe. I have experience with wire diagrams, fault handling, and wire building.</p>
                 </div>
             </div>
             <div class="col s12 m4 l4">
