Added info to info section, changed links, and took out a row of projects

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <div class="container">
             <div class="nav-wrapper"><a id="logo-container" href="#top" class="brand-logo">adam wilkins</a>
             <ul id="nav-mobile" class="right side-nav">
-                <li><a href="#intro">Service</a></li>
-                <li><a href="#work">Work</a></li>
+                <li><a href="#intro">Info</a></li>
+                <li><a href="#work">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><a href = "#top"><img class="propic" src="adamtest.png" height ="60" width = "60"></a>
             </ul><a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
@@ -63,23 +63,23 @@
 
             <div  class="col s12 m4 l4">
                 <div class="center promo promo-example">
-                    <i class="mdi-image-flash-on"></i>
+                    <i class="mdi-device-airplanemode-on"></i>
                     <h5 class="promo-caption">Experienced</h5>
-                    <p class="light center">I currently work as an Air Force Avionics Technician for the C-130J airframe. I have experience with wire diagrams, fault handling, and wire building.</p>
+                    <p class="light center">I currently work as an Air Force Avionics Technician for the C-130J Heavy airframe. I have experience with reading wire diagrams, fault handling, wire building, and circuit repairs. Furthermore I am in senior year of my undergraduate for Electrical Engineering</p>
                 </div>
             </div>
             <div class="col s12 m4 l4">
                 <div class="center promo promo-example">
-                    <i class="mdi-social-group"></i>
-                    <h5 class="promo-caption">User Experience Focused</h5>
-                    <p class="light center">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+                    <i class="mdi-hardware-phonelink"></i>
+                    <h5 class="promo-caption">Knowledgable</h5>
+                    <p class="light center">I am knowledgable in a number of programming languages with Java and Python being the foremost. I also am proficient in C++, MATLAB, and HTML/CSS. Recently I have also begun developing on the Android Operating System.</p>
                 </div>
             </div>
             <div class="col s12 m4 l4">
                 <div class="center promo promo-example">
-                    <i class="mdi-hardware-desktop-windows"></i>
-                    <h5 class="promo-caption">Fully responsive</h5>
-                    <p class="light center">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
+                    <i class="mdi-image-color-lens"></i>
+                    <h5 class="promo-caption">Rounded</h5>
+                    <p class="light center">In my freetime, I enjoy learning more programming languages. I also enjoy working on side Engineering projects (as seen below). I also have a passion for drawing, playing piano/guitar, and mantaining fitness through exercise. </p>
                 </div>
             </div>
         </div>
@@ -89,20 +89,20 @@
 <!--Work-->
 <div class="section scrollspy" id="work">
     <div class="container">
-        <h2 class="header text_b">Work </h2>
+        <h2 class="header text_b">Projects </h2>
         <div class="row">
             <div class="col s12 m4 l4">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="img/project1.jpg">
+                        <img class="activator" src="img/quadcopter.jpg">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Project Title <i class="mdi-navigation-more-vert right"></i></span>
-                        <p><a href="#">Project link</a></p>
+                        <span class="card-title activator grey-text text-darken-4">QuadCopter<i class="mdi-navigation-more-vert right"></i></span>
+                        <p><a href="https://www.youtube.com/watch?v=-UEHl3xnVJo" target="_blank">Video</a></p>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">Project Title <i class="mdi-navigation-close right"></i></span>
-                        <p>Here is some more information about this project that is only revealed once clicked on.</p>
+                        <p>Me and a fellow engineer student built a quadcopter from scratch using different parts we bought and assembled online. We are currently working on intergrating a raspberry pi for camera functionality and autonomous flight.</p>
                     </div>
                 </div>
             </div>
@@ -136,7 +136,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col s12 m4 l4">
+            <!--<div class="col s12 m4 l4">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="img/project4.jpg">
@@ -181,6 +181,7 @@
                     </div>
                 </div>
             </div>
+        -->
         </div>
     </div>
 </div>
@@ -230,12 +231,12 @@
                 <h5 class="white-text">Social</h5>
                 <ul>
                     <li>
-                        <a class="white-text" href="https://github.com/joashp">
+                        <a class="white-text" href="https://github.com/adamwilkins" target="_blank">
                             <i class="small fa fa-github-square white-text"></i> Github
                         </a>
                     </li>
                     <li>
-                        <a class="white-text" href="https://www.linkedin.com/in/joashp">
+                        <a class="white-text" href="https://www.linkedin.com/profile/view?id=AAMAABZXNPsB7ELz0y6nSpmA2M3313lEcmhaK-Y&trk=hp-identity-name" target="_blank">
                             <i class="small fa fa-linkedin-square white-text"></i> Linkedin
                         </a>
                     </li>
