Changed parallax image and removed projects

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col s12 m4 l4">
+            <!-- <div class="col s12 m4 l4">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="img/project2.jpeg">
@@ -188,7 +188,7 @@
 
 <!--Parallax-->
 <div class="parallax-container">
-    <div class="parallax"><img src="img/parallax1.png"></div>
+    <div class="parallax"><img src="img/parallax1.jpg"></div>
 </div>
 
 <!--Footer-->
