--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link href="css/materialize.css" type="text/css" rel="stylesheet">
     <link href="css/style.css" type="text/css" rel="stylesheet" >
     <link href="css/font-awesome.min.css" type="text/css" rel="stylesheet" >
+
+    <link rel="SHORTCUT ICON" href="favicon.ico" type="image/x-icon" />
+    <link rel="ICON" href="favicon.ico" type="image/ico" />
+
     <script src="js/modernizr.js"></script> <!-- Modernizr -->
 </head>
 <body id="top" class="scrollspy">
