--- a/index.html
+++ b/index.html
@@ -69,21 +69,21 @@
                 <div class="center promo promo-example">
                     <i class="mdi-device-airplanemode-on"></i>
                     <h5 class="promo-caption">Experienced</h5>
-                    <p class="light center">I currently work as an Air Force Avionics Technician for the C-130J Heavy airframe. I have experience with reading wire diagrams, fault handling, wire building, and circuit repairs. Furthermore I am in senior year of my undergraduate for Electrical Engineering</p>
+                    <p class="light center">I currently work as an Air Force Avionics Technician for the C-130J Heavy airframe. I have experience with reading wire diagrams, fault handling, wire building, and circuit repairs. Furthermore, I am in senior year of my undergraduate for Electrical Engineering.</p>
                 </div>
             </div>
             <div class="col s12 m4 l4">
                 <div class="center promo promo-example">
                     <i class="mdi-hardware-phonelink"></i>
                     <h5 class="promo-caption">Knowledgable</h5>
-                    <p class="light center">I am knowledgable in a number of programming languages with Java and Python being the foremost. I also am proficient in C++, MATLAB, and HTML/CSS. Recently I have also begun developing on the Android Operating System.</p>
+                    <p class="light center">I am knowledgable in a number of programming languages with Java and Python being the foremost. I also am proficient in C++, MATLAB, and HTML/CSS. Recently, I have also begun developing on the Android Operating System.</p>
                 </div>
             </div>
             <div class="col s12 m4 l4">
                 <div class="center promo promo-example">
                     <i class="mdi-image-color-lens"></i>
                     <h5 class="promo-caption">Rounded</h5>
-                    <p class="light center">In my freetime, I enjoy learning more programming languages. I also enjoy working on side Engineering projects (as seen below). I also have a passion for drawing, playing piano/guitar, and mantaining fitness through exercise. </p>
+                    <p class="light center">In my freetime, I enjoy learning more programming languages. I also enjoy working on side Engineering projects (as seen below). I also have a passion for drawing, playing piano/guitar, and maintaining fitness through exercise. </p>
                 </div>
             </div>
         </div>
@@ -106,7 +106,7 @@
                     </div>
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">Project Title <i class="mdi-navigation-close right"></i></span>
-                        <p>Me and a fellow engineer student built a quadcopter from scratch using different parts we bought and assembled online. We are currently working on intergrating a raspberry pi for camera functionality and autonomous flight.</p>
+                        <p>A fellow engineer student and I built a quadcopter from scratch using different parts we bought and assembled online. We achieved flight and then attached a raspberry pi as a camera that streamed live video.</p>
                     </div>
                 </div>
             </div>
